v1.9.0：速度优化（预判 / 连接复用 / 结果缓存）
先把延迟拆开量了一遍（真接口 + 同款 HttpURLConnection 客户端）：
  · 客户端建连接：连接池冷 830~873ms，复用后 9~14ms
  · 服务端算完（TTFB）：250~330ms ← 唯一大头
  · 服务端抖动尖刺：1.5~1.8s（约 3%）
顺手证伪两条"优化"：砍问题（3 题 283~314ms vs 7 题 291~295ms）和省握手都没用。

于是只做"把等待藏起来"：
  · 预判：onMsgMenu 那一刻就发请求 → 冷启动第一次 1144ms → 点「意图」只等 9ms
  · 连接复用：成功时不再 disconnect()（出错才断）→ 第二次起握手 873ms → 14ms
  · 结果缓存：同一条消息再看直接秒回（上限 40 条）
  · 空答案重试等待 600ms → 120ms
  · 分段计时日志：握手 Xms + 服务端 Yms = 共 Zms
新增设置项（设置.properties 里 A/B/C 可改）：预判 / 结果缓存 / 耗时日志
新增 test/test_speed.bsh：真调接口验证连接复用、预判、缓存淘汰